# roughrax

./: README.md  pyproject.toml
docs/examples/: convergence.py  ees.py  worm_sphere_sde.py
docs/examples/sigsmooth_rde/: main.py
docs/examples/sigsmooth_roundtrip/: main.py
roughrax/: __init__.py  _bases.py  _polysig.py  _pseudo_bialgebra_map.py  _signature.py  _sigsmooth.py  _term.py  _virtual_path.py  _wrapper.py
roughrax/_solver/: __init__.py  commutator_free_log_ode.py  df_rough_rk3.py  log_ode.py  roessler.py
tests/: test_benchmarks.py  test_commutator_free_log_ode.py  test_pseudo_bialgebra_map.py  test_signature_interpolation.py  test_wrapper.py
