[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "roughrax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.1",
    "jax[cuda]>=0.9.1",
    "pysiglib[cuda]>=3.0.1",
    "kauri",
    "georax",
]

[tool.uv.sources]
diffrax-lowstorage = {git = "https://github.com/luke-a-thompson/diffrax-lowstorage.git"}
georax = {git = "https://github.com/luke-a-thompson/georax.git"}

[project.optional-dependencies]
dev = [
    "pytest",
    "fbm>=0.3.0",
    "diffrax-lowstorage",
    "matplotlib>=3.10.8",
    "tqdm"
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
