[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "roughrax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.1",
    "jax[cuda]>=0.9.1",
    "pysiglib>=3.0.1",
    "pysiglib-cuda>=3.0.1",
    "georax",
]

[tool.uv.sources]
diffrax-lowstorage = {git = "https://github.com/luke-a-thompson/diffrax-lowstorage.git", rev = "6bca580732583a492742bc39dc4b65072c8427bf"}
georax = {git = "https://github.com/luke-a-thompson/georax.git"}
pysiglib = {path = "/home/luke/pySigLibax"}
pysiglib-cuda = {path = "/home/luke/pySigLibax/plugins/cuda"}

[project.optional-dependencies]
dev = [
    "pytest",
    "fbm>=0.3.0",
    "diffrax-lowstorage",
    "matplotlib>=3.10.8",
    "tqdm",
    "pytest-benchmark>=5.2.3",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
